maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:50: error: ')' expected but '}' found.
    }
    ^